css/main.css
/* ... */
footer a img:hover {
  transform: scale(1.5);
}

.footer-nav {
  display: inline-flex;
  margin-top: 30px;
  width: 100%;
}

.footer-nav .resources,
.footer-nav .license,
.footer-nav .navigation,
.footer-nav .contact {
  padding-inline-end: 3.5rem;
}

.footer-nav a {
  color: #223242;
  font-size: 18px;
  font-style: italic;
  line-height: 22px;
  display: block;
  padding: 0.5rem 0;
  -webkit-transition: translate(-50%, -50%);
  transition: all ease 500ms;
}

.footer-nav a:hover {
  transform: scale(1.2);
}

div .Copyright {
  height: auto;
  background: #223242;
  text-align: right;
  padding: 2rem;
  margin: 30px 0 5px 0;
}

.social-icons a {
  padding-right: 2rem;
}

.social-icons {
  float: left;
}

.copyright-text {
  float: right;
}

.copyright-text p a {
  color: var(--main-Chartreuse-color);
}

/* End of Homepage css */


/* Modal css */
.modal,
.modal2 {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.65);
  overflow: hidden;
}

.modal-content {
  background-color: #f4f4f4;
  margin: 10% auto;
  width: 60%;
  border: none;
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
  border-radius: 20px;
  -ms-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  -o-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  -webkit-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  -moz-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  background: rgba(255, 255, 255, 255);
  animation: modalopen 1.5s ease;
  display: block;
}

@keyframes modalopen {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.modal-header,
.modal-footer {
  background: var(--main-Chartreuse-color);
  color: white;
  padding: 15px;
  border-radius: 20px;
}

.closeBtn,
.closeBtn2 {
  font-size: 2.5rem;
  float: right;
  transform: rotate(45deg);
  transition: 0.3s linear;
  color: white;
  -webkit-text-stroke: 2px;
}

.closeBtn:hover,
.closeBtn:focus,
.closeBtn2:hover,
.closeBtn2:focus {
  cursor: pointer;
  transform: scale(1.5) rotate(225deg);
  color: grey;
}

.form-signup,
.form-signin {
  text-align: center;
}


/* About Us */

body#about {
  background-image: linear-gradient(to bottom, #854b5b, #8e5b57, #916d5b, #917f66, #918f79);
}

body#about .menu-btn .btn-line {
  background: var(--main-Chartreuse-color);
}

body#about nav li a {
  font-size: 18px;
  line-height: 20px;
  color: #D8DFE8;
  text-transform: uppercase;
}

body#about .clear-btn a {
  color: #ffffff;
}

.about-landing {
  text-align: left;
  display: inline-block;
  margin-top: 5em;
  text-align: right;

}

.about-landing-text {
  width: 65%;
  float: right;
}

.about-landing-text h1,
.about-ending-text h1 {
  margin-bottom: 15px;
  color: #D8DFE8;
}

.about-landing-text p,
.about-ending-text p {
  margin-bottom: 15px;
  color: #FFFFFF;
}

.about-landing-image {
  margin-left: -2%;
  width: 35%;
  float: left;
}

.rocket {
  margin-top: 5rem;
  width: 100%;
  height: auto;
}

.about-ending {
  margin-top: 3rem;
}

.about-ending-image {
  width: 20%;
  height: auto;
}

body#about footer {
  display: block;
  margin-top: 5rem;
  text-align: center;
}

/* End of About section css */

/* Contact Page css */


/* End of Contact Page css */

/* Exam Selection Page css */

.accordion {
  background-color: var(--main-Chartreuse-color);
  color: #ffffff;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  border-radius: 25px;
  text-align: left;
  outline: none;
  font-size: 15px;
  transition: 0.4s;
  margin: 1rem 0;
}

.active,
.accordion:hover {
  background-color: var(--main-sage-color);
}

.accordion:after {
  content: '\002B';
  color: #f8f0e2;
  font-weight: bold;
  float: right;

}

.medical:after {
  content: '\f0f0';
  font-family: "Font Awesome 5 Free";

  color: #f8f0e2;
  font-weight: bold;
  float: right;

}

.nursing:after {
  content: '\f82f';
  font-family: "Font Awesome 5 Free";
  color: #f8f0e2;
  font-weight: bold;
  float: right;

}

.pharmacy:after {
  content: '\f5b1';
  font-family: "Font Awesome 5 Free";
  color: #f8f0e2;
  font-weight: bold;
  float: right;
}

.dentistry:after {
  content: '\f5c9';
  font-family: "Font Awesome 5 Free";
  color: #f8f0e2;
  font-weight: bold;
  float: right;
}

.active:after {
  content: "\2212";
}

.panel {
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-in-out;
}

div.panel ul li a {
  text-decoration: none;
  font-size: 24px;
  line-height: 29px;
  color: #657783;
}

div.panel ul li a:hover {
  opacity: 0.8;
}

/* Exam Page */

.hideme {
  opacity: 0;
}

.display {

  position: relative;
  z-index: 1;
  font-size: 12px;
  transform: translateX(-38%);
  color: red;

}

/*code*/

.sublist {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex-wrap: wrap;
  cursor: pointer;
  padding: 10px;

}

.sublist li {
  margin: 10px;
  transition: all 0.3s ease;
  letter-spacing: 1px solid;
  color: #333;
}

.sublist li:hover {
  letter-spacing: 2px;
  color: #ffa500;
}

.container-question {
  margin-top: 2em;
  text-align: left;
  padding: 25px;
  height: auto;
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
  border-radius: 20px;
  -ms-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  -o-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  -webkit-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  -moz-box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  box-shadow: 0px 3px 5px 1px rgba(50, 50, 50, 2);
  background: rgba(255, 255, 255, 255);

}

.question {
  padding: 10px;
}

.question p {
  font-weight: 600;
  letter-spacing: 2px;
}

.option div {
  margin: 20px;
}
/* ... */

